feat: implement auto insurance system with policy, claim, and support management

--- a/test-login.html
+++ b/test-login.html
@@ -19,7 +19,7 @@
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({
-                        username: 'test',
+                        usernameOrEmail: 'test',
                         password: 'test'
                     })
                 });
